[package]
name = "kooDB"
version = "0.1.0"
edition = "2024"


[lib]
name="kooDB"
path="src/lib.rs"


[[bin]]
name = "external"
path="external_excess.rs"


[[bin]]
name = "list"
path="list_users.ts"

[[example]]
name = "flexible"
path="examples/flexible_example.rs"


[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
